discussion/kv_engine/161070/161070_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Return ReleaseResult from CM::removeClosedUnrefCheckpoints

ReleaseResult.count stores the original return value (ie, num of
non-meta items removed from checkpoints) and ReleaseResult.memory
stores an estimate of bytes released. The latter will be used in
follow-up patches.

Change-Id: I36543c1b6bc64dfa0932c95ac1d6cf86b14f4edd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-14 06:47:52.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-09-14 06:48:47.000000000
Message: 
Patch Set 5: Verified+1

Rebase on a parent's comment only change
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 06:50:07.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33910/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
fatal error: "gmock/gmock.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33910/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39806/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\build\tlm\deps\folly.exploded\include\folly/portability/GTest.h(32): fatal error C1083: Cannot open include file: "gtest/gtest.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39806/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12334/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12334/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1975/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1975/ )

Compile error at [2021-09-14T06:48:40.491Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1975/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13091/ : FAILURE

Compile error at [2021-09-14T06:48:37.486Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13091/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14191/ : FAILURE

Compile error at [2021-09-14T06:49:06.947Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14684/ : FAILURE

Compile error at [2021-09-14T06:49:19.924Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14684/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13951/ : FAILURE

Compile error at [2021-09-14T06:49:40.588Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22184/ : FAILURE

Compile error at [2021-09-14T06:49:27.927Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22184/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1993/ : FAILURE

Compile error at [2021-09-14T06:49:35.087Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1993/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11124/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
